Envoy/http.yaml
static_resources:
  listeners:
  - name: stocktrader_listener
    address:
      socket_address: 
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: stockapi_route
            virtual_hosts:
            - name: stockapi_backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                route:
                  cluster: stockapi_cluster
            typed_per_filter_config:
              envoy.filters.http.cors:
                "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                allow_origin_string_match:
                - safe_regex:
                    google_re2: {}
                    regex: ".*"
                allow_methods: GET, POST, PUT, DELETE, OPTIONS
                allow_headers: content-type, authorization
                max_age: "3600"

          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: stockapi_cluster
    connect_timeout: 2s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: stockapi_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: stockapi
                port_value: 44300
